# Recommendation-System

./: .gitignore  AUDIT_REPORT.md  Dockerfile  LICENSE  README.md  dvc.yaml  ecosystem.config.js  pyproject.toml  temp_feature_test.py  test_lgbm.py  tmp_eval_map12.py
.agent/rules/: base.md
.github/workflows/: ci.yml
artifacts/: two_stage_lgbm.pkl
configs/: default.yaml
notebooks/: .gitignore  create_eda.py  create_eda_extra.py  create_results.py  results.ipynb  run_eda.py
scripts/: api.py  evaluate.py  quick_test.py  train.py
src/rec_sys/: __init__.py  baselines.py  candidate_generation.py  cf_model.py  data_utils.py  ensemble.py  feature_engineering.py  main.py  model.py  preprocessing.py
tests/: test_metrics.py  test_preprocessing.py
